--- a/package.json
+++ b/package.json
@@ -10,22 +10,22 @@
   "author": "Denis Vuyka <denis.vuyka@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "markdown-it": "^4.2.1",
-    "markdown-it-replace-link": "^1.0.0",
-    "react": "^0.13.3",
-    "react-bootstrap": "^0.22.3",
-    "react-router": "^0.13.3",
-    "react-router-bootstrap": "^0.14.0"
+    "markdown-it": "4.*",
+    "markdown-it-replace-link": "1.*",
+    "react": "0.*",
+    "react-bootstrap": "0.*",
+    "react-router": "0.*",
+    "react-router-bootstrap": "0.*"
   },
   "devDependencies": {
-    "babelify": "^6.1.0",
-    "browserify": "^10.2.0",
-    "electron-prebuilt": "^0.26.0",
-    "grunt": "^0.4.5",
-    "grunt-browserify": "^3.8.0",
-    "grunt-contrib-less": "^1.0.1",
-    "grunt-contrib-uglify": "^0.9.1",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-react": "^0.12.2"
+    "babelify": "6.*",
+    "browserify": "10.*",
+    "electron-prebuilt": "0.29.*",
+    "grunt": "0.4.*",
+    "grunt-browserify": "3.*",
+    "grunt-contrib-less": "1.*",
+    "grunt-contrib-uglify": "0.*",
+    "grunt-contrib-watch": "0.*",
+    "grunt-react": "0.*"
   }
 }
